# python-playground

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  learning_plan.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/DISCUSSION_TEMPLATE/: help-with-notebook.yml  learning-tips.yml  share-your-project.yml
.github/workflows/: ci.yml
certificates/: README.md  certificate_demo_student_20250827.txt  progress_tracker.py
datasets/: README.md  employee_data.csv  sales_data.csv  student_scores.csv  weather_data.csv
docs/: index.md
notebooks/01_foundation/: 01_getting_started.ipynb  02_variables_data_types.ipynb  03_basic_operations.ipynb  04_user_input_output.ipynb  05_conditionals.ipynb
notebooks/02_core_skills/: 06_loops.ipynb  07_lists_indexing.ipynb  08_strings_deep_dive.ipynb  09_functions_basics.ipynb  10_functions_advanced.ipynb
notebooks/03_intermediate/: 11_dictionaries.ipynb  12_tuples_sets.ipynb  13_file_operations.ipynb  14_error_handling.ipynb  15_oop_basics.ipynb
notebooks/04_advanced/: 16_oop_advanced.ipynb  17_modules_packages.ipynb  18_working_with_libraries.ipynb  19_advanced_features.ipynb  20_project_development.ipynb
notebooks/05_data_science/: 21_numpy.ipynb  22_pandas.ipynb  23_data_visualization.ipynb  24_data_analysis.ipynb  25_data_science_project.ipynb
notebooks/06_ai_machine_learning/: 26_ml_fundamentals.ipynb  27_deep_learning_pytorch.ipynb  28_nlp.ipynb  29_computer_vision.ipynb  30_ai_applications.ipynb
scripts/: bootstrap.sh
src/playground/: __init__.py  utils.py
tests/: test_project.py  test_sanity.py  test_utils.py
