[project]
name = "python-playground"
version = "0.1.0"
description = "Beginner-friendly Python & Jupyter learning playground"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [ { name = "Jawad Farooqi" } ]
keywords = ["python", "learning", "notebooks", "beginners"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Intended Audience :: Education",
  "Topic :: Education",
]

dependencies = []

[project.optional-dependencies]
# Add heavier libs later; keep core minimal for fast CI
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.5",
  "black>=24.4.2",
]
data-science = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
]
full = [
  "pytest>=8.0.0",
  "ruff>=0.5.5", 
  "black>=24.4.2",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "jupyter>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
